Fixing the DOtnet migration by Adding dotnet ef migrations remove dotnet ef database update
MIssing the "server=" on the connection string

updating the connection in MSSQLMANAGER
Changing the USername and Password

Stoping the services
and restating it
Reconnecting the server before renning the Dotnet Command

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "DESKTOP-RDQE34V\\SQLEXPRESS;
-    Database=WorldCities; 
-    User Id=WorldCities;Password=MyVeryOwn$721;
-    Integrated Security=False;MultipleActiveResultSets=True\"
-  },
+    "DefaultConnection": "Server=DESKTOP-RDQE34V\\SQLEXPRESS;Database=WorldCities;User Id=WorldCities;Password=PASSWORD;Integrated Security=False;MultipleActiveResultSets=True"},
 
 
   "Logging": {
