--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,10 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.13",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "9.1.13",
     "@angular/compiler": "9.1.13",
     "@angular/core": "9.1.13",
     "@angular/forms": "9.1.13",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "9.1.13",
     "@angular/platform-browser-dynamic": "9.1.13",
     "@angular/platform-server": "9.1.13",
@@ -25,7 +27,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
-    "jquery": "3.4.1",
+    "jquery": "^3.6.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
