--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -32,7 +32,7 @@
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "0.10.3"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.15",
